--- a/src/index.css
+++ b/src/index.css
@@ -388,12 +388,28 @@
      transform: translate(-50%, -50%) rotate(360deg);
    }
  }
+
+
+ @media (min-width: 768px) {
+  .custom-ani-e{
+    transform: translateX(-400px);
+    opacity: 0;
+    transition: transform 1s , opacity 2s;
+   }
+   .custom-ani-d{
+    transform: none;
+    opacity: 1;
+    transition: transform 1s , opacity 2s;
+   }
+}
  
  @media (min-width: 992px) {
    .navbar-expand-lg .navbar-nav a.nav-link {
      padding-right: 0;
      padding-left: 0;
-   }
+    }
+
+
  }
  
  @media (min-width: 1400px) {
